# pyprune

./: .gitignore  LICENSE  README.md  py_cleaner.py  pyproject.toml  requirements.txt
pyprune/: __init__.py  __main__.py  app.py  cli.py  models.py  scanner.py  subprocess_runner.py
pyprune/ui/: __init__.py  app.py  detail_panel.py  toolbar.py  tree_view.py
